--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -26,6 +26,8 @@
 
 </head>
 <body>
+    <%- include("../includes/navbar.ejs") %>
+
     <div class="container"><%- body %></div>
 
     <%- include("../includes/footer.ejs") %>
